@@ -121,8 +121,9 @@ LICENSE
 
 Copyright (C) 2005 -- 2008 Sverker Nilsson, S. Nilsson Computer System AB
 
-The right is granted to copy and use this code according to the rules
-in what is commonly referred to as an MIT license.
+The right is granted to copy, use, modify and redistribute this code
+according to the rules in what is commonly referred to as an MIT
+license.
 
 *** USE AT YOUR OWN RISK AND BE AWARE THAT THIS IS AN EARLY RELEASE ***
 
